--- a/docker/registry.docker-compose.yaml
+++ b/docker/registry.docker-compose.yaml
@@ -1,20 +1,14 @@
-version: '3.3'
-
+name: home-server
 services:
-  registry:
-    name: registry
-    restart: always
-    image: registry:latest
-    ports:
-      - 443:443
-    volumes:
-	  - ${path}/certs:/certs
-      - ./config/default/config.yml:/etc/docker/registry/config.yml:ro
-      - ./data:/var/lib/registry:rw
-  environment:
-    -e REGISTRY_HTTP_ADDR=0.0.0.0:443 >
-    -e REGISTRY_HTTP_TLS_CERTIFICATE=/certs/your_domain.pem >
-    -e REGISTRY_HTTP_TLS_KEY=/certs/your_domain.key >
-    #- "STANDALONE=true"
-    #- "MIRROR_SOURCE=https://registry-1.docker.io"
-    #- "MIRROR_SOURCE_INDEX=https://index.docker.io"
+    registry:
+        restart: always
+        container_name: registry
+        volumes:
+            - ${path}/certs:/certs
+        environment:
+            - REGISTRY_HTTP_ADDR=0.0.0.0:443
+            - REGISTRY_HTTP_TLS_CERTIFICATE=/certs/client.crt
+            - REGISTRY_HTTP_TLS_KEY=/certs/client.key
+        ports:
+            - 443:443
+        image: registry:latest
