--- a/src/Home.Blog.Mvc/Home.Blog.Mvc.csproj
+++ b/src/Home.Blog.Mvc/Home.Blog.Mvc.csproj
@@ -1,18 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
+    <Dockerfile>..\..\Dockerfile</Dockerfile>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Piranha" Version="10.3.0" />
     <PackageReference Include="Piranha.AspNetCore" Version="10.3.0" />
     <PackageReference Include="Piranha.AspNetCore.Identity.SQLServer" Version="10.3.0" />
     <PackageReference Include="Piranha.AttributeBuilder" Version="10.3.0" />
+    <PackageReference Include="Piranha.Azure.BlobStorage" Version="10.3.0" />
     <PackageReference Include="Piranha.Data.EF.SQLServer" Version="10.3.0" />
     <PackageReference Include="Piranha.ImageSharp" Version="10.3.0" />
-    <PackageReference Include="Piranha.Local.FileStorage" Version="10.3.0" />
     <PackageReference Include="Piranha.Manager" Version="10.3.0" />
     <PackageReference Include="Piranha.Manager.LocalAuth" Version="10.3.0" />
     <PackageReference Include="Piranha.Manager.TinyMCE" Version="10.3.0" />
