--- a/src/Home.Blog.Mvc/appsettings.json
+++ b/src/Home.Blog.Mvc/appsettings.json
@@ -8,8 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "piranha": "Server=tcp:localhost,1433;Initial Catalog=piranha;User ID=sa;Password=Password1#;Encrypt=true;TrustServerCertificate=true;",
-    //"piranha": "Filename=./piranha.db",
+    "piranha": "Server=tcp:192.168.50.158,1433;Initial Catalog=piranha;User ID=sa;Password=Password1#;Encrypt=true;TrustServerCertificate=true;",
     "blobstorage": "DefaultEndpointsProtocol=https;AccountName=;AccountKey=;EndpointSuffix="
   }
 }
