--- a/src/Home.Blog.Mvc/Home.Blog.Mvc.csproj
+++ b/src/Home.Blog.Mvc/Home.Blog.Mvc.csproj
@@ -2,11 +2,26 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
     <Dockerfile>..\..\Dockerfile</Dockerfile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="seed\*.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\publish-docker-registry.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="seed\*.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
@@ -20,6 +35,10 @@
     <PackageReference Include="Piranha.Manager" Version="10.3.0" />
     <PackageReference Include="Piranha.Manager.LocalAuth" Version="10.3.0" />
     <PackageReference Include="Piranha.Manager.TinyMCE" Version="10.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Home.Blog.Common\Home.Blog.Common.csproj" />
   </ItemGroup>
 
 </Project>
