--- a/src/Home.Blog.Mvc/appsettings.json
+++ b/src/Home.Blog.Mvc/appsettings.json
@@ -1,14 +1,14 @@
 {
+  "AllowedHosts": "*",
+  "connectionString": {
+    "blobstorage": null,
+    "database": null
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "piranha": "Server=tcp:192.168.50.158,1433;Initial Catalog=piranha;User ID=sa;Password=Password1#;Encrypt=true;TrustServerCertificate=true;",
-    "blobstorage": "DefaultEndpointsProtocol=https;AccountName=;AccountKey=;EndpointSuffix="
   }
 }
