--- a/src/Home.Blog.Mvc/Properties/launchSettings.json
+++ b/src/Home.Blog.Mvc/Properties/launchSettings.json
@@ -1,12 +1,47 @@
 {
   "profiles": {
-    "Home.Blog.Mvc": {
+    "Local WSL2": {
+      "commandName": "WSL2",
+      "launchUrl": "https://localhost:64022",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "local"
+      },
+      "applicationUrl": "https://localhost:64022;http://localhost:64023"
+    },
+    "Local Kestrel": {
+      "commandName": "Project",
+      "launchUrl": "https://localhost:64022",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "local"
+      },
+      "applicationUrl": "https://localhost:64022;http://localhost:64023"
+    },
+    "Internal Kestrel": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "internal"
       },
       "applicationUrl": "https://localhost:64022;http://localhost:64023"
+    },
+    "Azure Kestrel": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "azure"
+      },
+      "applicationUrl": "https://localhost:64022;http://localhost:64023"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "local",
+        "ASPNETCORE_URLS": "https://+:443;http://+:80"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
