updated dotnet and nodejs, migrate to minio for self hosted, and update to Piranha CMS v12

--- a/src/Home.Blog.Mvc/Properties/launchSettings.json
+++ b/src/Home.Blog.Mvc/Properties/launchSettings.json
@@ -16,6 +16,14 @@
       },
       "applicationUrl": "https://localhost:64022;http://localhost:64023"
     },
+    "LAN Kestrel": {
+      "commandName": "Project",
+      "launchUrl": "https://localhost:64022",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "lan"
+      },
+      "applicationUrl": "https://localhost:64022;http://localhost:64023"
+    },
     "Internal Kestrel": {
       "commandName": "Project",
       "launchBrowser": true,
