--- a/src/Home.Blog.Mvc/appsettings.json
+++ b/src/Home.Blog.Mvc/appsettings.json
@@ -1,8 +1,15 @@
 {
   "AllowedHosts": "*",
   "connectionString": {
-    "blobstorage": null,
+    "fileStorage": null,
     "database": null
+  },
+  "fileStorage": {
+    "accessKey": null,
+    "bucket": "uploads",
+    "endpoint": null,
+    "secretKey": null,
+    "isSecure": false
   },
   "Logging": {
     "LogLevel": {
