--- a/src/Home.Blog.Mvc/Home.Blog.Mvc.csproj
+++ b/src/Home.Blog.Mvc/Home.Blog.Mvc.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -25,16 +25,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
-    <PackageReference Include="Piranha" Version="10.3.0" />
-    <PackageReference Include="Piranha.AspNetCore" Version="10.3.0" />
-    <PackageReference Include="Piranha.AspNetCore.Identity.SQLServer" Version="10.3.0" />
-    <PackageReference Include="Piranha.AttributeBuilder" Version="10.3.0" />
-    <PackageReference Include="Piranha.Azure.BlobStorage" Version="10.3.0" />
-    <PackageReference Include="Piranha.Data.EF.SQLServer" Version="10.3.0" />
-    <PackageReference Include="Piranha.ImageSharp" Version="10.3.0" />
-    <PackageReference Include="Piranha.Manager" Version="10.3.0" />
-    <PackageReference Include="Piranha.Manager.LocalAuth" Version="10.3.0" />
-    <PackageReference Include="Piranha.Manager.TinyMCE" Version="10.3.0" />
+    <PackageReference Include="Minio" Version="7.0.0" />
+    <PackageReference Include="Piranha" Version="12.0.0" />
+    <PackageReference Include="Piranha.AspNetCore" Version="12.0.0" />
+    <PackageReference Include="Piranha.AspNetCore.Identity.SQLServer" Version="12.0.0" />
+    <PackageReference Include="Piranha.AttributeBuilder" Version="12.0.0" />
+    <PackageReference Include="Piranha.Data.EF.SQLServer" Version="12.0.0" />
+    <PackageReference Include="Piranha.ImageSharp" Version="12.0.0" />
+    <PackageReference Include="Piranha.Manager" Version="12.0.0" />
+    <PackageReference Include="Piranha.Manager.LocalAuth" Version="12.0.0" />
+    <PackageReference Include="Piranha.Manager.TinyMCE" Version="12.0.0" />
   </ItemGroup>
 
   <ItemGroup>
